# shiranai

./: .gitignore  LICENSE  api.py  data.py  deploy.py  export.ipynb  nearest.py  nets.py  phash.py  predict.ipynb  preprocess.ipynb  pyproject.toml  segment.py  train.ipynb  train.py  utils.py  x.py
datasets/: README.dataset.txt  README.roboflow.txt  data.yaml
datasets/test/labels/: 008_PNG.rf.bc3ea79adf0043b4efabfc40988a7dd4.txt  010_PNG.rf.e01221c9dba31ba02f172c419f8b309d.txt  022_PNG.rf.bfe5e9c106037124d604b977d4d28380.txt  061_PNG.rf.a32964297c90ca2e4c7bf7a7cf967a1b.txt  068_PNG.rf.a7a3dff96ddde41b89a027c06287aff1.txt  069_PNG.rf.d2e8b3b321230fba7d39066e2f557596.txt  100_png.rf.e827c2b2ed69c155ec20dfd547efc4ea.txt  25_png.rf.070c488fb6aec9ed61cb9155c0149080.txt  37_png.rf.fdc67806cbb8f9551787b8eee1343a2e.txt  40_png.rf.673d41a7effeda8c8b6dad737ac333fb.txt  41_png.rf.92a5d6de6b7086383fe3a88b0a7638bf.txt  42_png.rf.c8d17f108f9191b75ccccc6034852151.txt  43_png.rf.5b044fa6e46aa0c6d83197c7bdb547ee.txt  44_png.rf.2d9063e7515c0f7652bb0f5e3bcf869a.txt  45_png.rf.263faee963230c718815794ef2332937.txt  46_png.rf.950ae40e2b3c3afa2970b3f70a91dcdc.txt  47_png.rf.8410b6f7684befdc02a66d7e124189a1.txt  48_png.rf.e47fd08a8c9be4b78fa470e52574fa6b.txt  49_png.rf.a116e96ccd2d38cfe5c9d9afca3f9910.txt  50_png.rf.e42746d959675ee86590c1e759cb32b2.txt  51_png.rf.52b4f14f1cacd24d44846e88de370a78.txt  52_png.rf.eed07952d4be0e51e2bb13c8b6811497.txt  53_png.rf.81b5fac55289b7cfe5dcc10e48b57eb0.txt  54_png.rf.cad8051b74f835701dc20dc629946988.txt  55_png.rf.0fc4b64c428834c9c33950cd77eddb6b.txt  (+29 more)
(+869 files in other folders)
